# Coze2JianYing

./: .env.example  .gitattributes  .gitignore  ADD_CAPTIONS_UPDATE.md  ADD_EFFECTS_UPDATE.md  ADD_FUNCTIONS_MECHANISM_INVESTIGATION.md  API_DEMO.md  API_PROJECT_SUMMARY.md  API_QUICKSTART.md  API_TEST_GUIDE.md  BACKEND_ARCHITECTURE_TRANSFORMATION.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  COMPLETION_REPORT.md  CONFIG_CONVERSION_GUIDE.md  COZEPY_DEPENDENCY.md  COZE_API_SETTINGS_IMPLEMENTATION.md  COZE_API_UI_GUIDE.md  CUSTOMNAMESPACE_FIX_SUMMARY.md  DEMO_AND_TEST_INSTRUCTIONS.md  DEVELOPMENT_ROADMAP.md  DRAFT_INTERFACE_ANALYSIS.md  DRAFT_INTERFACE_DOCUMENTATION_INDEX.md  DRAFT_INTERFACE_QUICK_REFERENCE.md  DRAFT_MANAGEMENT_GUIDE.md  DRAFT_NAMING_FIX_DOCUMENTATION.md  FILES_CHANGED.md  FINAL_SOLUTION.md  FIX_ADD_FUNCTION_ID_EXTRACTION.md  FIX_OPTIONAL_STRING_CONDITION_BUG.md  FIX_SUMMARY.md  FIX_VISUAL_SUMMARY.md  GUI_API_INTEGRATION_COMPLETE.md  GUI_API_INTEGRATION_GUIDE.md  GUI_TABBED_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_API_SPECS.md  IMPLEMENTATION_SUMMARY_DOC_GEN.md  IMPLEMENTATION_SUMMARY_ISSUE2.md  (+105 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
app/: README_API.md  __init__.py  api_main.py  config.py  main.py
assets/: README.md
backend/: api_main.py
coze_jianying_assistant/: __init__.py  main.py
coze_plugin/: COZE_CONFIGURATION.md  README.md  __init__.py  main.py
docs/: API_DESIGN.md  API_ENDPOINTS_REFERENCE.md  API_IMPLEMENTATION_ROADMAP.md  API_MIGRATION_EXAMPLES.py  API_USAGE_EXAMPLES.md  BATCH_API.md  CONFIGURATION.md  COZE_OPENAPI_IMPORT_GUIDE.md  DRAFT_SAVE_FIX.md  EMBEDDED_LOG_PANEL_SCREENSHOTS.md  EMBEDDED_SERVICE_FIX_SUMMARY.md  GENERATOR_USAGE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_DRAFT_DURATION_FIX.md  ISSUE_RESPONSE_MANUAL_IMPORT.md  LOGGING_IMPROVEMENTS.md  LOGGING_IMPROVEMENTS_SUMMARY.md  LOGGING_IMPROVEMENTS_VISUAL.md  NGROK_INTEGRATION_README.md  README.md  STORAGE_CONFIG_GUIDE.md  UI_COMPARISON.md  WINDOWS_STORAGE_IMPLEMENTATION.md  draft_duration_calculation_fix.md  draft_storage_improvement.md  fix_issue_240_summary.md  generate_coze_openapi_guide.md  ui_visualization.md
examples/: README.md  add_audios_demo.py  add_audios_practical_example.py  add_captions_demo.py  add_images_demo.py  add_videos_demo.py  local_plugin_bot_example.py  local_plugin_workflow_example.py  make_audio_info_demo.py  make_caption_info_demo.py  make_image_info_demo.py  make_video_info_demo.py
resources/: README.md
scripts/: README.md  check_enum_overlap.py  check_signature.py  coze_json_formatter.py  draft_generation_script_template.py  export_api_specs.py  generate_coze_openapi.py  generate_custom_class_handlers.py  generate_handler_from_api.py  generate_tool_doc.py  scan_and_generate_docs.py  test_api_demo.py  test_brace_escape.py  test_coze_json_formatter.py  test_custom_class_handlers.py  test_customnamespace_handling.py  test_download_urls.py  test_empty_customnamespace_fix.py  test_extract_type_name.py  test_generate_coze_openapi.py  test_generated_handlers.py  test_generated_script_example.py  test_id_extraction.py  test_optional_params.py  test_readme_generation.py  test_schema_adaptation.py  test_string_condition_fix.py
src/: README_API.md  __init__.py  main.py
test_utils/: README.md  __init__.py  test_converter.py
tests/: README.md  demo_ngrok_async.py  demo_output_format.py  manual_test_ngrok_restart.py  test_add_audios.py  test_add_audios_integration.py  test_add_captions.py  (+63 more)
(+955 files in other folders)
